k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nestjs-api
  namespace: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nestjs-api

  template:
    metadata:
      labels:
        app: nestjs-api

    spec:
      containers:
      - name: nestjs-api

        image: engrmuqeetahmad/k8s:nest-health1
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 3000
   
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
